--- a/.github/workflows/main_webapp-core-hammad.yml
+++ b/.github/workflows/main_webapp-core-hammad.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy ASP.Net Core app to Azure Web App - webapp-core-Hammad
+name: Build and deploy Node.js app to Azure Web App - webapp-core-Hammad
 
 on:
   push:
@@ -18,22 +18,22 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up .NET Core
-        uses: actions/setup-dotnet@v4
+      - name: Set up Node.js version
+        uses: actions/setup-node@v3
         with:
-          dotnet-version: '8.x'
+          node-version: '22.x'
 
-      - name: Build with dotnet
-        run: dotnet build --configuration Release
-
-      - name: dotnet publish
-        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
+      - name: npm install, build, and test
+        run: |
+          npm install
+          npm run build --if-present
+          npm run test --if-present
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
-          name: .net-app
-          path: ${{env.DOTNET_ROOT}}/myapp
+          name: node-app
+          path: .
 
   deploy:
     runs-on: ubuntu-latest
@@ -46,16 +46,16 @@ jobs:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
-          name: .net-app
+          name: node-app
       
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_B16BC2C579414D9097C51FA621CBDCD2 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_B90AA8AD536C498DA450C4352EA75F91 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_1F76E4F0AA3F498098E4E056522DB9B4 }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_5C898AD737DB4E53B479E1DFAE3AEC9A }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_E1A13E1C762440ACAF9D24F126EADD5D }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_2B6FF6BA34114EB9B3E95100536F940D }}
 
-      - name: Deploy to Azure Web App
+      - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
